test/tests/stages/18_structures/invalid_parse/extra_credit/union_decl_empty_member_list.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  union
  identifier(s)
  {
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
